--- a/index.html
+++ b/index.html
@@ -14,159 +14,160 @@
 <body class="montserrat contenedor">
 <div class="contenedor">
     <div class="container-fluid">
-        <div class="row p-1" id="barra">
+        <div class="row p-1 padre" id="barra" style="height: 80px">
             <div class="container-fluid d-flex justify-content-end">
                 <div class="row" >
                     <div class="container mr-5">
                         <div class="row">
                             <div class="col-lg-7 col-md-7 col-sm-12 d-flex justify-content-lg-center align-items-lg-center">
-                                <i class="icon-line-phone texto-blanco" style=" font-size: 18px"></i><span class="tamannio-14 ml-2 texto-blanco">Soporte: +52 (55) 1234 5678</span>
+                                <i class="icon-line-phone texto-blanco" style=" font-size: 25px"></i><span class="ml-2 texto-blanco" style=" font-size: 25px">Soporte: +52 (55) 1234 5678</span>
                             </div>
                             <div class="col-lg-5 col-md-5 col-sm-12 d-flex justify-content-lg-center align-items-lg-center">
-                                <i class="icon-mail texto-blanco" style="margin-top: 5px; font-size: 18px"></i><span class="tamannio-14 ml-2 mr-3 texto-blanco">soporte@superpay.mx</span>
+                                <i class="icon-mail texto-blanco" style="margin-top: 5px; font-size: 25px"></i><span class="ml-2 mr-3 texto-blanco" style=" font-size: 25px">soporte@superpay.mx</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="centrado" >
             <div class="row container-fluid">
                 <div class="col-md-6">
                     <div class="container-fluid d-flex ">
-                        <img src="assets/images/logos/Recurso%203.svg" style="height: 100px; margin-top: 30px; margin-bottom: 30px">
+                        <img src="assets/images/logos/Recurso%203.svg" style="height: 200px; margin-top: 120px; margin-bottom: 120px">
                     </div>
                 </div>
                 <div class="col-md-6 padre">
                     <div class="container-fluid d-flex justify-content-end">
                         <div class="justify-content-end" style="text-align: right; ">
-                            <h6 class="texto-verde" >12 de Enero  de 2022</h6>
-                            <h3 class="texto-azul montserrat-bold">Comprobante de pago</h3>
+                            <h6 class="texto-verde" style="font-size: 32px">12 de Enero  de 2022</h6>
+                            <h3 class="texto-azul montserrat-bold" style="font-size: 70px">Comprobante de pago</h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container padre" style="margin-top: 4rem; background-color: #e6e6e6">
-            <div class="row container" style="margin: 8px">
+        <div class="centrado padre" style="margin-top: 4rem; background-color: #e6e6e6">
+            <div class="row container col-md-12" style="margin: 8px">
                 <div class="col-md-6">
                     <div class="container-fluid d-flex">
                         <div style="text-align: left; ">
-                            <h6 class="texto-azul montserrat-bold">PROVEEDOR DE SERVICIO</h6>
-                            <h6>ACNT*MAIM</h6>
+                            <h6 class="texto-azul montserrat-bold letra">PROVEEDOR DE SERVICIO</h6>
+                            <h6 class="letra">ACNT*MAIM</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 padre">
                     <div class="container-fluid d-flex justify-content-end">
                         <div class="justify-content-end" style="text-align: right; ">
-                            <h6 class="texto-azul montserrat-bold">NO. DE TARJETA</h6>
-                            <h6>5204-XXXX-XXXX-2396</h6>
+                            <h6 class="texto-azul montserrat-bold letra">NO. DE TARJETA</h6>
+                            <h6 class="letra">5204-XXXX-XXXX-2396</h6>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container padre";>
-            <div class="row container" style="margin: 8px">
+        <div class="centrado padre">
+            <div class="row container col-md-12" style="margin: 8px">
                 <div class="col-md-6">
                     <div class="container-fluid d-flex">
                         <div style="text-align: left; ">
-                            <h6 class="texto-azul montserrat-bold">COMERCIO</h6>
-                            <h6>SOLUCIONES EN AGUA MAIN S.A. DE C.V.</h6>
+                            <h6 class="texto-azul montserrat-bold letra">COMERCIO</h6>
+                            <h6 class="letra">SOLUCIONES EN AGUA MAIN S.A. DE C.V.</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 padre">
                     <div class="container-fluid d-flex justify-content-end">
                         <div class="justify-content-end" style="text-align: right; ">
-                            <h6 class="texto-azul montserrat-bold">ID DE TRANSACCION</h6>
-                            <h6>pbLahrMmPF</h6>
+                            <h6 class="texto-azul montserrat-bold letra">ID DE TRANSACCION</h6>
+                            <h6 class="letra">pbLahrMmPF</h6>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container padre" style=" background-color: #e6e6e6">
-            <div class="row container" style="margin: 8px">
+        <div class="centrado padre" style=" background-color: #e6e6e6">
+            <div class="row container col-md-12" style="margin: 8px">
                 <div class="col-md-6">
                     <div class="container-fluid d-flex">
                         <div style="text-align: left; ">
-                            <h6 class="texto-azul montserrat-bold">TARJETAHABIENTE</h6>
-                            <h6>LIORA KALACH</h6>
+                            <h6 class="texto-azul montserrat-bold letra">TARJETAHABIENTE</h6>
+                            <h6 class="letra">LIORA KALACH</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 padre">
                     <div class="container-fluid d-flex justify-content-end">
                         <div class="justify-content-end" style="text-align: right; ">
-                            <h6 class="texto-azul">REF</h6>
-                            <h6>280941</h6>
+                            <h6 class="texto-azul letra">REF</h6>
+                            <h6 class="letra">280941</h6>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container padre" style="margin-top: 2rem; background-color: #5db67a">
-            <div class="row container padre" style="margin: 8px">
+        <div class="centrado padre" style="margin-top: 2rem; background-color: #5db67a">
+            <div class="row container padre col-md-12" style="margin: 8px">
                 <div class="col-md-6 padre">
                     <div class="container-fluid d-flex padre">
                         <div class="padre" style="text-align: left; ">
-                            <h4 class="texto-azul montserrat-bold">Concepto</h4>
+                            <h4 class="texto-azul montserrat-bold letra">Concepto</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 padre">
                     <div class="container-fluid d-flex padre justify-content-end">
                         <div class="padre" style="text-align: right; ">
-                            <h4 class="texto-azul montserrat-bold">Total</h4>
+                            <h4 class="texto-azul montserrat-bold letra">Total</h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container padre" style="margin-top: 1rem;">
-            <div class="row container padre" style="margin: 8px">
+        <div class="centrado padre" style="margin-top: 1rem;">
+            <div class="row container padre col-md-12" style="margin: 8px">
                 <div class="col-md-6 padre">
                     <div class="container d-flex padre">
                         <div class="container padre" style="text-align: left; ">
-                            <h6 class="texto-azul">PRDRENTA PAGO DE MES DE ENERO DE 2022 (3-12)</h6>
+                            <h6 class="texto-azul letra">PRDRENTA PAGO DE MES DE ENERO DE 2022 (3-12)</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 padre">
                     <div class="container d-flex padre justify-content-end">
                         <div class="container padre justify-content-end" style="text-align: right; ">
-                            <h6 class="texto-azul montserrat-bold">$430.00 MXN</h6>
+                            <h6 class="texto-azul montserrat-bold letra">$430.00 MXN</h6>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="centrado">
             <hr style="background-color: #95999c; height: 1px">
         </div>
-        <div class="container padre" style="margin-top: 10rem">
-            <div class="row container padre justify-content-center" style="margin: 8px">
+        <div class="centrado padre" style="margin-top: 30rem">
+            <div class="row container padre justify-content-center col-md-12" style="margin: 8px">
                 <div class="col-md-8 padre" style="border-top: 2px black solid">
                     <div class="container-fluid d-flex padre justify-content-center">
                         <div class="padre">
-                            <h5>NOMBRE COMPLETO Y FIRMA</h5>
+                            <h5 class="letra">NOMBRE COMPLETO Y FIRMA</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container padre" style="margin-top: 10rem">
-            <div class="row container padre" style="margin: 8px">
+        <div class="centrado padre" style="margin-top: 20rem">
+            <div class="row container padre col-md-12" style="margin: 8px">
                 <div class="col-md-12 padre">
-                    <p class="texto-azul" style="font-size: 14px">
+                    <p class="texto-azul" style="font-size: 25px">
                         Al firmar este documento ratifico y estoy conforme y enterado del cargo que aparece en mi estado de cuenta como SUPERPAY*MAIM.
+                        <br>
                         <br>
                         Por este pagar me obligo a pagar incondicionalmente a la orden de la sociedad emisora de la tarjeta de crédito cuyo número aparece en este título, el importe del mismo, bajo los
                         términos y condiciones establecidos en el contrato de apertura de crédito que tenga celebrado con la misma sociedad.
-                        <br>
+                        <br><br>
                         En caso de operaciones con tarjeta de débito, expresadamente reconozco y acepto que este recibo es el comprobante de la operacion realizada, misma  que tendrá valor probatorio y
                         fuerza legal, en virtud de que lo firmé personalmente y/o digité mi número de identificación personal como firma electrónica, el cual es exclusivo de mi responsabilidad
                         manifestando, plena conformidad al respecto. <a class="texto-azul" href="www.superpay.mx">www.superpay.mx</a>
@@ -177,22 +178,22 @@
 
 
     </div>
-    <div class="padre" style="background-color: #28437b; width: 100%; height: 50px" >
+    <footer class="padre" style="background-color: #28437b; width: 100%; height: 80px" >
         <div class="col-md-6 padre">
             <div class="container d-flex padre">
                 <div class="container padre" style="text-align: left; ">
-                    <p class="texto-blanco" style="font-size: 14px"><a href="www.superpay.mx" class="texto-blanco">www.superpay.mx</a></p>
+                    <p class="texto-blanco" style="font-size: 24px"><a href="www.superpay.mx" class="texto-blanco">www.superpay.mx</a></p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 padre">
             <div class="container d-flex padre justify-content-end">
                 <div class="container padre justify-content-end" style="text-align: right; ">
-                    <p class="texto-blanco" style="font-size: 14px">Fecha y hora de creación: 24 Ene 2022 11:56</p>
+                    <p class="texto-blanco" style="font-size: 24px">Fecha y hora de creación: 24 Ene 2022 11:56</p>
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </div>
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/plugins.min.js"></script>
